backend: add todo record detail api
