# backend/controller/todo/share.go
@@ -9,6 +9,7 @@ var Group = core.NewGroup("/todos")
 
 func init() {
 	Group.Register(core.NewController("/records", http.MethodGet, listTodoRecords))
+	Group.Register(core.NewController("/records/:id", http.MethodGet, getTodoRecord))
 	Group.Register(core.NewController("/upsert", http.MethodPost, upsertTodo))
 	Group.Register(core.NewController("/:id", http.MethodDelete, deleteTodo))
 	Group.Register(core.NewController("/:id/done", http.MethodPost, markAsDone))
